--- a/mbp/cruises_intro_tw_01.html
+++ b/mbp/cruises_intro_tw_01.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-TW">
 <head>
 <meta charset="UTF-8">
-<title>交通部航港局 對外公開資訊平台(公開測試版) - 郵輪簡介</title>
+<title>交通部航港局 對外公開資訊平台(公開測試版) - 雲頂香港有限公司</title>
 <meta name='description' content=""/>
 <meta name='keywords' content=""/>
 <meta name="MobileOptimized" content="width">
@@ -161,7 +161,7 @@
                                 <li><p><a href="#">AAAAA</a></p></li>
                             </ul>
                         </div>
-                    </div>
+                    </div>  
                 </li>
                 <li><h3><a href="#">國際經貿館</a></h3>
                     <div class="subMumeBox clearfix" id="subMenu_01">
@@ -180,7 +180,7 @@
                                 <li><p><a href="#">AAAAA</a></p></li>
                             </ul>
                         </div>
-                    </div> 
+                    </div>
                 </li>
                 <li><h3><a href="#">國際組織館</a></h3></li>
                 <li><h3><a href="#">數據統計館</a></h3></li>
@@ -221,7 +221,7 @@
 
     <section class="the_location">
         <div class="ContentsBox">
-            <p><a class="home" href="index.html"><i class="fas fa-home"></i> 首頁</a>   \   <a href="#">政策專區</a>   \   <a href="#">郵輪產業發展專區</a>   \   <span>郵輪簡介</span></p>
+            <p><a class="home" href="index.html"><i class="fas fa-home"></i> 首頁</a>   \   <a href="#">政策專區</a>   \   <a href="#">郵輪產業發展專區</a>   \   <a href="cruises_intro.html">郵輪簡介</a>   \   <a href="cruises_intro_a.html">以台灣為母港</a>   \   <span>雲頂香港有限公司</span></p>
         </div>
     </section>
 
@@ -230,131 +230,33 @@
             <h2 class="title">郵輪簡介</h2>
             <div class="fileBox">
                 <h4 class="main_sort"><a href="#">郵輪新聞</a><a class="btn_in the_color_blue" href="cruises_intro.html">油輪簡介</a><a href="#">預報船期表</a><a href="#">統計資料</a><a href="#">郵輪爭議事件報導</a></h4>
-                <h5 class="sub_title_type"><a class="btn_in" href="cruises_intro_tw_01.html">以台灣為掛靠港</a><a href="cruises_intro_tw_02.html">以台灣為母港</a></h5>
-                <ul class="cruises_list_text clearfix">
+                <h5 class="sub_title">雲頂香港有限公司</h5>
+                <ul class="cruises_list clearfix">
                     <li>
-                        <a href="cruises/the_world.html">
-                            <h3 class="cruises_name">世界號</h3>
+                        <a target="_blank" href="cruises/world_dream.html">
+                            <img src="cruises/images/world_dream/cover.jpg">
+                            <div class="infoBox">
+                                <h3 class="cruises_name">世界夢號</h3>
+                                <p class="cruises_info">World Dream</p>
+                            </div>
                         </a>
                     </li>
                     <li>
-                        <a href="cruises/asuka_II.html">
-                            <h3 class="cruises_name">飛鳥2號</h3>
+                        <a target="_blank" href="cruises/explorer_dream.html">
+                            <img src="cruises/images/explorer_dream/cover.jpg">
+                            <div class="infoBox">
+                                <h3 class="cruises_name">探索夢</h3>
+                                <p class="cruises_info">Explorer Dream</p>
+                            </div>
                         </a>
                     </li>
                     <li>
-                        <a href="cruises/pacific_venus.html">
-                            <h3 class="cruises_name">太平洋維納斯</h3>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="cruises/caledonian_sky.html">
-                            <h3 class="cruises_name">卡莉多麗</h3>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="cruises/msc_splendida.html">
-                            <h3 class="cruises_name">輝煌輪</h3>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="cruises/star_legend.html">
-                            <h3 class="cruises_name">傳奇號</h3>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="cruises/celebrity_millennium.html">
-                            <h3 class="cruises_name">千禧輪</h3>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="cruises/mariner_of_the_seas.html">
-                            <h3 class="cruises_name">海洋水手號</h3>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="cruises/quantum_of_the_seas.html">
-                            <h3 class="cruises_name">海洋量子號</h3>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="cruises/voyager_of_the_seas.html">
-                            <h3 class="cruises_name">海洋航行者</h3>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="cruises/azamara_quest.html">
-                            <h3 class="cruises_name">探索號</h3>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="cruises/silver_whisper.html">
-                            <h3 class="cruises_name">銀葉號</h3>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="cruises/insignia.html">
-                            <h3 class="cruises_name">英希格</h3>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="cruises/seven_seas_mariner.html">
-                            <h3 class="cruises_name">七海水手號</h3>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="cruises/norwegian_jewel.html">
-                            <h3 class="cruises_name">挪威寶石</h3>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="cruises/nautica.html">
-                            <h3 class="cruises_name">諾蒂卡</h3>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="cruises/nippon_maru.html">
-                            <h3 class="cruises_name">日本丸</h3>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="cruises/crystal_symphony.html">
-                            <h3 class="cruises_name">和音天使</h3>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="cruises/westerdam.html">
-                            <h3 class="cruises_name">威士特丹</h3>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="cruises/aidabella.html">
-                            <h3 class="cruises_name">愛達貝拉</h3>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="cruises/seabourn_sojourn.html">
-                            <h3 class="cruises_name">璽寶旅行者</h3>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="cruises/viking_orion.html">
-                            <h3 class="cruises_name">維京獵戶星</h3>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="cruises/europa2.html">
-                            <h3 class="cruises_name">歐洲2號</h3>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="cruises/europa.html">
-                            <h3 class="cruises_name">歐洲號</h3>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="cruises/le_laperouse.html">
-                            <h3 class="cruises_name">拉彼魯茲號</h3>
+                        <a target="_blank" href="cruises/superstar_aquarius.html">
+                            <img src="cruises/images/superstar_aquarius/cover.jpg">
+                            <div class="infoBox">
+                                <h3 class="cruises_name">寶瓶星</h3>
+                                <p class="cruises_info">Superstar Aquarius</p>
+                            </div>
                         </a>
                     </li>
                 </ul>
