--- a/mbp/cruises_intro_tw_06.html
+++ b/mbp/cruises_intro_tw_06.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-TW">
 <head>
 <meta charset="UTF-8">
-<title>交通部航港局 對外公開資訊平台(公開測試版) - 嘉年華郵輪集團</title>
+<title>交通部航港局 對外公開資訊平台(公開測試版) - 日本郵船株式會社</title>
 <meta name='description' content=""/>
 <meta name='keywords' content=""/>
 <meta name="MobileOptimized" content="width">
@@ -52,11 +52,11 @@
 
 
      $(function() {
-
+ 
   // store the slider in a local variable
   var $window = $(window),
       flexslider = { vars:{} };
-
+ 
   // tiny helper function to add breakpoints
   function getGridSize() {
     return (window.innerWidth < 400) ? 3 :
@@ -78,11 +78,11 @@
       maxItems: getGridSize() // use function to pull in initial value
     });
   });
-
+ 
   // check grid size on resize event
   $window.resize(function() {
     var gridSize = getGridSize();
-
+ 
     flexslider.vars.minItems = gridSize;
     flexslider.vars.maxItems = gridSize;
   });
@@ -161,7 +161,7 @@
                                 <li><p><a href="#">AAAAA</a></p></li>
                             </ul>
                         </div>
-                    </div>
+                    </div>  
                 </li>
                 <li><h3><a href="#">國際經貿館</a></h3>
                     <div class="subMumeBox clearfix" id="subMenu_01">
@@ -180,7 +180,7 @@
                                 <li><p><a href="#">AAAAA</a></p></li>
                             </ul>
                         </div>
-                    </div>
+                    </div> 
                 </li>
                 <li><h3><a href="#">國際組織館</a></h3></li>
                 <li><h3><a href="#">數據統計館</a></h3></li>
@@ -190,7 +190,7 @@
                 <li><h3><a href="#">海事工程船</a></h3></li>
             </ul>
         </div>
-
+        
     </nav>
 </header>
 
@@ -199,7 +199,7 @@
         <div class="theNew">
             <div class="ContentsBox">
                 <div class="p_new clearfix">
-                    <p><a href="#">本資料庫已於106本資料庫已於106本資料庫已於106本資料庫已於106本資料庫已於106/5/25在首頁建置影音專區，輪播航港局相關介紹影片，並有多國語言，歡迎使用者多加點閱</a></p>
+                    <p><a href="#">本資料庫已於106本資料庫已於106本資料庫已於106本資料庫已於106本資料庫已於106/5/25在首頁建置影音專區，輪播航港局相關介紹影片，並有多國語言，歡迎使用者多加點閱</a></p> 
                 </div>
             </div>
         </div>
@@ -221,7 +221,7 @@
 
     <section class="the_location">
         <div class="ContentsBox">
-            <p><a class="home" href="index.html"><i class="fas fa-home"></i> 首頁</a>   \   <a href="#">政策專區</a>   \   <a href="#">郵輪產業發展專區</a>   \   <a href="cruises_intro.html">郵輪簡介</a>   \   <a href="cruises_intro_a.html">以台灣為母港</a>   \   <span>嘉年華郵輪集團</span></p>
+            <p><a class="home" href="index.html"><i class="fas fa-home"></i> 首頁</a>   \   <a href="#">政策專區</a>   \   <a href="#">郵輪產業發展專區</a>   \   <a href="cruises_intro.html">郵輪簡介</a>   \   <a href="cruises_intro_b.html">以台灣為掛靠港</a>   \   <span>日本郵船株式會社</span></p>
         </div>
     </section>
 
@@ -230,59 +230,14 @@
             <h2 class="title">郵輪簡介</h2>
             <div class="fileBox">
                 <h4 class="main_sort"><a href="#">郵輪新聞</a><a class="btn_in the_color_blue" href="cruises_intro.html">油輪簡介</a><a href="#">預報船期表</a><a href="#">統計資料</a><a href="#">郵輪爭議事件報導</a></h4>
-                <h5 class="sub_title">嘉年華郵輪集團</h5>
+                <h5 class="sub_title">日本郵船株式會社</h5>
                 <ul class="cruises_list clearfix">
                     <li>
-                        <a target="_blank" href="cruises/majestic_princess.html">
-                            <img src="cruises/images/albatros/cover.jpg">
+                        <a target="_blank" href="cruises/pacific_venus.html">
+                            <img src="cruises/images/pacific_venus/cover.jpg">
                             <div class="infoBox">
-                                <h3 class="cruises_name">盛世公主號</h3>
-                                <p class="cruises_info">Majestic Princess</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a target="_blank" href="cruises/diamond_princess.html">
-                            <img src="cruises/images/diamond_princess/cover.jpg">
-                            <div class="infoBox">
-                                <h3 class="cruises_name">鑽石公主號</h3>
-                                <p class="cruises_info">Diamond Princess</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a target="_blank" href="cruises/sun_princes.html">
-                            <img src="cruises/images/sun_princes/cover.jpg">
-                            <div class="infoBox">
-                                <h3 class="cruises_name">太陽公主號</h3>
-                                <p class="cruises_info">Sun Princes</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a target="_blank" href="cruises/costa_atlantica.html">
-                            <img src="cruises/images/costa_atlantica/cover.jpg">
-                            <div class="infoBox">
-                                <h3 class="cruises_name">歌詩達大西洋號</h3>
-                                <p class="cruises_info">Costa Atlantica</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a target="_blank" href="cruises/costa_venezia.html">
-                            <img src="cruises/images/costa_venezia/cover.jpg">
-                            <div class="infoBox">
-                                <h3 class="cruises_name">歌詩達威尼斯號</h3>
-                                <p class="cruises_info">Costa Venezia</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a target="_blank" href="cruises/costa_neoromantica.html">
-                            <img src="cruises/images/costa_neoromantica/cover.jpg">
-                            <div class="infoBox">
-                                <h3 class="cruises_name">歌詩達新浪漫號</h3>
-                                <p class="cruises_info">Costa Neoromantica</p>
+                                <h3 class="cruises_name">太平洋維納斯</h3>
+                                <p class="cruises_info">Pacific Venus</p>
                             </div>
                         </a>
                     </li>
