--- a/mbp/cruises_intro_tw_10.html
+++ b/mbp/cruises_intro_tw_10.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-TW">
 <head>
 <meta charset="UTF-8">
-<title>交通部航港局 對外公開資訊平台(公開測試版) - 嘉年華郵輪集團</title>
+<title>交通部航港局 對外公開資訊平台(公開測試版) - 皇家加勒比遊輪有限公司</title>
 <meta name='description' content=""/>
 <meta name='keywords' content=""/>
 <meta name="MobileOptimized" content="width">
@@ -52,11 +52,11 @@
 
 
      $(function() {
-
+ 
   // store the slider in a local variable
   var $window = $(window),
       flexslider = { vars:{} };
-
+ 
   // tiny helper function to add breakpoints
   function getGridSize() {
     return (window.innerWidth < 400) ? 3 :
@@ -78,11 +78,11 @@
       maxItems: getGridSize() // use function to pull in initial value
     });
   });
-
+ 
   // check grid size on resize event
   $window.resize(function() {
     var gridSize = getGridSize();
-
+ 
     flexslider.vars.minItems = gridSize;
     flexslider.vars.maxItems = gridSize;
   });
@@ -190,7 +190,6 @@
                 <li><h3><a href="#">海事工程船</a></h3></li>
             </ul>
         </div>
-
     </nav>
 </header>
 
@@ -221,7 +220,7 @@
 
     <section class="the_location">
         <div class="ContentsBox">
-            <p><a class="home" href="index.html"><i class="fas fa-home"></i> 首頁</a>   \   <a href="#">政策專區</a>   \   <a href="#">郵輪產業發展專區</a>   \   <a href="cruises_intro.html">郵輪簡介</a>   \   <a href="cruises_intro_a.html">以台灣為母港</a>   \   <span>嘉年華郵輪集團</span></p>
+            <p><a class="home" href="index.html"><i class="fas fa-home"></i> 首頁</a>   \   <a href="#">政策專區</a>   \   <a href="#">郵輪產業發展專區</a>   \   <a href="cruises_intro.html">郵輪簡介</a>   \   <a href="cruises_intro_b.html">以台灣為掛靠港</a>   \   <span>皇家加勒比遊輪有限公司</span></p>
         </div>
     </section>
 
@@ -230,59 +229,59 @@
             <h2 class="title">郵輪簡介</h2>
             <div class="fileBox">
                 <h4 class="main_sort"><a href="#">郵輪新聞</a><a class="btn_in the_color_blue" href="cruises_intro.html">油輪簡介</a><a href="#">預報船期表</a><a href="#">統計資料</a><a href="#">郵輪爭議事件報導</a></h4>
-                <h5 class="sub_title">嘉年華郵輪集團</h5>
+                <h5 class="sub_title">皇家加勒比遊輪有限公司</h5>
                 <ul class="cruises_list clearfix">
                     <li>
-                        <a target="_blank" href="cruises/majestic_princess.html">
-                            <img src="cruises/images/albatros/cover.jpg">
+                        <a target="_blank" href="cruises/celebrity_millennium.html">
+                            <img src="cruises/images/celebrity_millennium/cover.jpg">
                             <div class="infoBox">
-                                <h3 class="cruises_name">盛世公主號</h3>
-                                <p class="cruises_info">Majestic Princess</p>
+                                <h3 class="cruises_name">千禧輪</h3>
+                                <p class="cruises_info">Celebrity Millennium</p>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a target="_blank" href="cruises/diamond_princess.html">
-                            <img src="cruises/images/diamond_princess/cover.jpg">
+                        <a target="_blank" href="cruises/mariner_of_the_seas.html">
+                            <img src="cruises/images/mariner_of_the_seas/cover.jpg">
                             <div class="infoBox">
-                                <h3 class="cruises_name">鑽石公主號</h3>
-                                <p class="cruises_info">Diamond Princess</p>
+                                <h3 class="cruises_name">海洋水手號</h3>
+                                <p class="cruises_info">Mariner Of The Seas</p>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a target="_blank" href="cruises/sun_princes.html">
-                            <img src="cruises/images/sun_princes/cover.jpg">
+                        <a target="_blank" href="cruises/quantum_of_the_seas.html">
+                            <img src="cruises/images/quantum_of_the_seas/cover.jpg">
                             <div class="infoBox">
-                                <h3 class="cruises_name">太陽公主號</h3>
-                                <p class="cruises_info">Sun Princes</p>
+                                <h3 class="cruises_name">海洋量子號</h3>
+                                <p class="cruises_info">Quantum Of The Seas</p>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a target="_blank" href="cruises/costa_atlantica.html">
-                            <img src="cruises/images/costa_atlantica/cover.jpg">
+                        <a target="_blank" href="cruises/voyager_of_the_seas.html">
+                            <img src="cruises/images/voyager_of_the_seas/cover.jpg">
                             <div class="infoBox">
-                                <h3 class="cruises_name">歌詩達大西洋號</h3>
-                                <p class="cruises_info">Costa Atlantica</p>
+                                <h3 class="cruises_name">海洋航行者</h3>
+                                <p class="cruises_info">Voyager Of The Seas</p>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a target="_blank" href="cruises/costa_venezia.html">
-                            <img src="cruises/images/costa_venezia/cover.jpg">
+                        <a target="_blank" href="cruises/azamara_quest.html">
+                            <img src="cruises/images/azamara_quest/cover.jpg">
                             <div class="infoBox">
-                                <h3 class="cruises_name">歌詩達威尼斯號</h3>
-                                <p class="cruises_info">Costa Venezia</p>
+                                <h3 class="cruises_name">探索號</h3>
+                                <p class="cruises_info">Azamara Quest</p>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a target="_blank" href="cruises/costa_neoromantica.html">
-                            <img src="cruises/images/costa_neoromantica/cover.jpg">
+                        <a target="_blank" href="cruises/silver_whisper.html">
+                            <img src="cruises/images/silver_whisper/cover.jpg">
                             <div class="infoBox">
-                                <h3 class="cruises_name">歌詩達新浪漫號</h3>
-                                <p class="cruises_info">Costa Neoromantica</p>
+                                <h3 class="cruises_name">銀葉號</h3>
+                                <p class="cruises_info">Silver Whisper</p>
                             </div>
                         </a>
                     </li>
