--- a/mbp/cruises_intro_tw_14.html
+++ b/mbp/cruises_intro_tw_14.html
@@ -52,11 +52,11 @@
 
 
      $(function() {
-
+ 
   // store the slider in a local variable
   var $window = $(window),
       flexslider = { vars:{} };
-
+ 
   // tiny helper function to add breakpoints
   function getGridSize() {
     return (window.innerWidth < 400) ? 3 :
@@ -78,11 +78,11 @@
       maxItems: getGridSize() // use function to pull in initial value
     });
   });
-
+ 
   // check grid size on resize event
   $window.resize(function() {
     var gridSize = getGridSize();
-
+ 
     flexslider.vars.minItems = gridSize;
     flexslider.vars.maxItems = gridSize;
   });
@@ -190,7 +190,6 @@
                 <li><h3><a href="#">海事工程船</a></h3></li>
             </ul>
         </div>
-
     </nav>
 </header>
 
@@ -221,7 +220,7 @@
 
     <section class="the_location">
         <div class="ContentsBox">
-            <p><a class="home" href="index.html"><i class="fas fa-home"></i> 首頁</a>   \   <a href="#">政策專區</a>   \   <a href="#">郵輪產業發展專區</a>   \   <a href="cruises_intro.html">郵輪簡介</a>   \   <a href="cruises_intro_a.html">以台灣為母港</a>   \   <span>嘉年華郵輪集團</span></p>
+            <p><a class="home" href="index.html"><i class="fas fa-home"></i> 首頁</a>   \   <a href="#">政策專區</a>   \   <a href="#">郵輪產業發展專區</a>   \   <a href="cruises_intro.html">郵輪簡介</a>   \   <a href="cruises_intro_b.html">以台灣為掛靠港</a>   \   <span>嘉年華郵輪集團</span></p>
         </div>
     </section>
 
@@ -233,56 +232,29 @@
                 <h5 class="sub_title">嘉年華郵輪集團</h5>
                 <ul class="cruises_list clearfix">
                     <li>
-                        <a target="_blank" href="cruises/majestic_princess.html">
-                            <img src="cruises/images/albatros/cover.jpg">
+                        <a target="_blank" href="cruises/westerdam.html">
+                            <img src="cruises/images/westerdam/cover.jpg">
                             <div class="infoBox">
-                                <h3 class="cruises_name">盛世公主號</h3>
-                                <p class="cruises_info">Majestic Princess</p>
+                                <h3 class="cruises_name">威士特丹</h3>
+                                <p class="cruises_info">Westerdam</p>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a target="_blank" href="cruises/diamond_princess.html">
-                            <img src="cruises/images/diamond_princess/cover.jpg">
+                        <a target="_blank" href="cruises/aidabella.html">
+                            <img src="cruises/images/aidabella/cover.jpg">
                             <div class="infoBox">
-                                <h3 class="cruises_name">鑽石公主號</h3>
-                                <p class="cruises_info">Diamond Princess</p>
+                                <h3 class="cruises_name">愛達貝拉</h3>
+                                <p class="cruises_info">Aidabella</p>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a target="_blank" href="cruises/sun_princes.html">
-                            <img src="cruises/images/sun_princes/cover.jpg">
+                        <a target="_blank" href="cruises/seabourn_sojourn.html">
+                            <img src="cruises/images/seabourn_sojourn/cover.jpg">
                             <div class="infoBox">
-                                <h3 class="cruises_name">太陽公主號</h3>
-                                <p class="cruises_info">Sun Princes</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a target="_blank" href="cruises/costa_atlantica.html">
-                            <img src="cruises/images/costa_atlantica/cover.jpg">
-                            <div class="infoBox">
-                                <h3 class="cruises_name">歌詩達大西洋號</h3>
-                                <p class="cruises_info">Costa Atlantica</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a target="_blank" href="cruises/costa_venezia.html">
-                            <img src="cruises/images/costa_venezia/cover.jpg">
-                            <div class="infoBox">
-                                <h3 class="cruises_name">歌詩達威尼斯號</h3>
-                                <p class="cruises_info">Costa Venezia</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a target="_blank" href="cruises/costa_neoromantica.html">
-                            <img src="cruises/images/costa_neoromantica/cover.jpg">
-                            <div class="infoBox">
-                                <h3 class="cruises_name">歌詩達新浪漫號</h3>
-                                <p class="cruises_info">Costa Neoromantica</p>
+                                <h3 class="cruises_name">璽寶旅行者</h3>
+                                <p class="cruises_info">Seabourn Sojourn</p>
                             </div>
                         </a>
                     </li>
