Udate html + css for shoppingcart

--- a/iiot/app_web/shop/index.html
+++ b/iiot/app_web/shop/index.html
@@ -75,7 +75,7 @@
 							<div class="photo" style="background-image: url(https://ct.yimg.com/xd/api/res/1.2/oO6C6LuSdbaJqZckv57fVg--/YXBwaWQ9eXR3YXVjdGlvbnNlcnZpY2U7aD01OTQ7cT04NTtyb3RhdGU9YXV0bzt3PTYxNw--/https://s.yimg.com/ob/image/c21718e2-6b37-4fc1-8245-23299e08e754.jpg);"></div>
 							<div class="product_info">
 								<h3 class="product_title">產品AAA</h3>
-								<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
+								<h4 class="sub_info">針對商品描</h4>
 								<p class="money">$129</p>
 								<div class="input_quantity">
 			                        <button><i class="fas fa-minus"></i></button>
