--- a/iiot/app_web/shop/shoppingcart_03.html
+++ b/iiot/app_web/shop/shoppingcart_03.html
@@ -49,6 +49,19 @@
 		    <form class="shopping_cart">
 		    	<h3 class="top_title">愛物聯小吃店 - 分店1</h3>
 		    	<ul class="order_list_done">
+		    		<li><p class="clearfix"><span class="l_t">商家電話</span><span class="r_info">0987654321</span></p></li>
+		    		<li><p class="clearfix"><span class="l_t">商家地址</span><span class="r_info">台北市民生東路三段107巷6號2樓</span></p></li>
+		    		<li><p class="clearfix"><span class="l_t">取餐方式</span><span class="r_info">外送</span></p></li>
+		    		<li><p class="clearfix"><span class="l_t">外送地址</span><span class="r_info">台北市南京東路三段星巴克1F</span></p></li>
+		    		<li class="bottom_line"><p class="clearfix"><span class="l_t">取餐時間</span><span class="r_info">立刻取餐</span></p></li>
+		    		<li><p class="clearfix"><span class="l_t">訂購人</span><span class="r_info">Pin</span></p></li>
+		    		<li><p class="clearfix"><span class="l_t">聯絡電話</span><span class="r_info">0987654321</span></p></li>
+		    		<li><p class="clearfix"><span class="l_t">Email</span><span class="r_info"> 123@456.456</span></p></li>
+		    		<li><p class="clearfix"><span class="l_t">統一編號</span><span class="r_info">54545454</span></p></li>
+		    		<li class="bottom_line"><p class="clearfix"><span class="l_t">備註</span><span class="r_info">無</span></p></li>
+		    		<li><p class="s_f">訂單項目</p></li>
+		    		<li class="buy_list"><p class="clearfix"><span class="l_t">蝦仁蛋炒飯</span><span class="r_nb">1$80 = $80</span></p></li>
+		    		<li class="width_f"><p>總金額：$160</p></li>
 		        </ul>
 		    </form>
 		    <form class="shopping_cart">
